# hc1-pulsesync-ai

./: .env.example  .gitattributes  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/v1/: agents.py  auth.py  calls.py  queue.py  router.py  sync.py
app/api/webhooks/: telephony.py  transcription.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 8ca9fe9316b3_initial_schema.py
app/db/models/: __init__.py  agent.py  audit_log.py  call.py  classification.py  crm_sync_log.py  queue_item.py  transcript.py
app/domain/auth/: service.py
app/domain/calls/: exceptions.py  service.py
app/domain/classification/: prompts.py  service.py
app/domain/queue/: service.py
app/domain/sync/: mapper.py  service.py
app/integrations/ai/: claude.py
app/integrations/crm/: base.py  hc1_crm.py
app/integrations/telephony/: base.py  twilio.py
app/integrations/transcription/: base.py  deepgram.py
app/schemas/: agent.py  call.py  queue.py  sync.py
app/utils/: audit.py  encryption.py
app/workers/: worker.py
app/workers/tasks/: classify.py  crm_push.py  transcribe.py
tests/: conftest.py
tests/unit/: test_health.py
