[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hc1-pulsesync-ai"
version = "0.1.0"
description = "Healthcare AI voice support backend for hc1 PulseSync AI"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",

    # Background workers
    "arq>=0.26.0",
    "redis>=5.0.0",

    # HTTP client (for CRM + transcription integrations)
    "httpx>=0.27.0",

    # Telephony
    "twilio>=9.0.0",

    # AI
    "anthropic>=0.30.0",

    # Encryption (PHI at rest)
    "cryptography>=43.0.0",

    # Utilities
    "python-multipart>=0.0.9",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
